--- a/app/views/suunnitelmat/elokuvamuokkaus.html
+++ b/app/views/suunnitelmat/elokuvamuokkaus.html
@@ -1,16 +1,45 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
-</html>
+
+{% extends "base.html" %}
+{% block content %}
+
+<h1>Uusi elokuva</h1>
+
+<form>
+    <div class="form-group">
+        <label>Nimi</label>
+        <input class="form-control" value="" type="text">
+    </div>
+    <div class="form-group">
+        <label>Näyttelijät</label>
+        <textarea class="form-control">TODO keksi miten listaat näyttelijät
+        </textarea>
+    </div>
+    <div class="form-group">
+        <label>Kirjoita selostus elokuvasta</label>
+        <textarea class="form-control" rows="15">
+        </textarea>
+    </div>
+    <div class="checkbox">
+        <p> AIHE </p>
+        <label>
+            <input type="checkbox">
+            kauhu
+        </label>
+        <label>
+            <input type="checkbox">
+            komedia
+        </label>
+        <label>
+            <input type="checkbox">
+            draama
+        </label>
+        <label>
+            <input type="checkbox">
+            sota
+        </label>
+    </div>
+    <div class="form-group">
+        <button type="submit" class="btn btn-primary">Lisää elokuva</button>
+    </div>
+</form>
+{% endblock %}
