--- a/app/views/base.html
+++ b/app/views/base.html
@@ -33,13 +33,14 @@
             <span class="icon-bar"></span>
           </button>
           <!-- Sovelluksen nimi -->
-          <a class="navbar-brand" href="{{base_path}}">Tsoha Bootstrap</a>
+          <a class="navbar-brand" href="{{base_path}}">PMDB</a>
         </div>
 
         <div class="collapse navbar-collapse" id="navigation">
           <ul class="nav navbar-nav">
             <!-- Navigaation linkit -->
-            <li><a href="{{base_path}}">Etusivu</a></li>
+            <li><a href="{{base_path}}/elokuvamuokkaus">Lisää elokuva</a></li>
+            <li><a href="{{base_path}}/arvostelu">Arvostelut</a></li>
           </ul>
         </div>
       </div>
