--- a/app/views/suunnitelmat/elokuvamuokkaus.html
+++ b/app/views/suunnitelmat/elokuvamuokkaus.html
@@ -4,10 +4,10 @@
 
 <h1>Uusi elokuva</h1>
 
-<form>
+<form method="post" action="{{base_path}}">
     <div class="form-group">
         <label>Nimi</label>
-        <input class="form-control" value="" type="text">
+        <input class="form-control" value="" type="text" name="nimi">
     </div>
     <div class="form-group">
         <label>Näyttelijät</label>
@@ -16,7 +16,7 @@
     </div>
     <div class="form-group">
         <label>Kirjoita selostus elokuvasta</label>
-        <textarea class="form-control" rows="15">
+        <textarea class="form-control" rows="15" name="kuvaus">
         </textarea>
     </div>
     <div class="checkbox">
