--- a/app/views/suunnitelmat/elokuvamuokkaus.html
+++ b/app/views/suunnitelmat/elokuvamuokkaus.html
@@ -4,7 +4,7 @@
 
 <h1>Uusi elokuva</h1>
 
-<form method="post" action="{{base_path}}">
+<form method="post" action="{{base_path}}/">
     <div class="form-group">
         <label>Nimi</label>
         <input class="form-control" value="" type="text" name="nimi">
@@ -16,7 +16,7 @@
     </div>
     <div class="form-group">
         <label>Kirjoita selostus elokuvasta</label>
-        <textarea class="form-control" rows="15" name="kuvaus">
+        <textarea class="form-control" rows="5" name="kuvaus">
         </textarea>
     </div>
     <div class="checkbox">
