--- a/app/views/suunnitelmat/elokuvamuokkaus.html
+++ b/app/views/suunnitelmat/elokuvamuokkaus.html
@@ -3,6 +3,15 @@
 {% block content %}
 
 <h1>Uusi elokuva</h1>
+  {% if errors %}
+    <div class="alert alert-danger">
+      <ul>
+        {% for error in errors %}
+          <li>{{error}}</li>
+        {% endfor %}
+      </ul>
+    </div>
+  {% endif %}
 
 <form method="post" action="{{base_path}}/">
     <div class="form-group">
@@ -16,8 +25,7 @@
     </div>
     <div class="form-group">
         <label>Kirjoita selostus elokuvasta</label>
-        <textarea class="form-control" rows="5" name="kuvaus">
-        </textarea>
+        <textarea class="form-control" rows="5" name="kuvaus"></textarea>
     </div>
     <div class="checkbox">
         <p> AIHE </p>
