--- a/app/views/suunnitelmat/etusivu.html
+++ b/app/views/suunnitelmat/etusivu.html
@@ -14,7 +14,7 @@
     <div class="row" style="width:50%">
         <a href="{{base_path}}/elokuva/{{elokuva.id}}" style="text-decoration: none">
         <h2>{{elokuva.nimi}}</h2>
-        <p> *kuva* <p>
+        <p> *arvostelujen keskiarvo* <p>
         
         <p> *näyttelijät* </p>
         </a>
