--- a/app/views/suunnitelmat/elokuva.html
+++ b/app/views/suunnitelmat/elokuva.html
@@ -5,13 +5,15 @@
     <div class="row" style="width:50%">
 
         <h2>{{elokuva.nimi}}</h2>
-        <p> *kuva* <p>
+        <p> *arvostelujen keskiarvo* <p>
+        
         <p>{{elokuva.kuvaus}}</p>
         <p> *näyttelijät* </p>
+        <p> *linkki arvosteluihin * </p>
         <form method="post" action="{{base_path}}/elokuva/{{elokuva.id}}/destroy">
-            <div class="form-group">
+            <div class="col-md-12">
                 <button type="submit" class="btn btn-primary">Poista elokuva</button>
-            </div>
-        </form>
-    </div>
+            </form>  
+        <a class="btn btn-default" href="{{base_path}}/elokuva/{{elokuva.id}}/muokkaus">Muokkaa</a>
+                    </div>
     {% endblock %}
