--- a/app/views/suunnitelmat/elokuvamuokkaus.html
+++ b/app/views/suunnitelmat/elokuvamuokkaus.html
@@ -18,31 +18,27 @@
         <label>Nimi</label>
         <input class="form-control" value="{{muokkaus.nimi}}" type="text" name="nimi">
     </div>
-    <div class="form-group">
-        <label>Näyttelijät</label>
-        <textarea class="form-control">TODO keksi miten listaat näyttelijät
-        </textarea>
-    </div>
+
     <div class="form-group">
         <label>Kirjoita selostus elokuvasta</label>
         <textarea class="form-control" rows="5" name="kuvaus">{{muokkaus.kuvaus}}</textarea>
     </div>
     <div class="checkbox">
-        <p> AIHE </p>
+        <h1> VALITSE AIHE </h1>
         <label>
-            <input type="checkbox" name="tyyli_id" title="Kauhu">
+            <input type="checkbox" name="tyyli_id" value="Kauhu">
             kauhu
         </label>
         <label>
-            <input type="checkbox" name="tyyli_id" title="Komedia">
+            <input type="checkbox" name="tyyli_id" value="Komedia">
             komedia
         </label>
         <label>
-            <input type="checkbox" name="tyyli_id" title="Draama">
+            <input type="checkbox" name="tyyli_id" value="Draama" >
             draama
         </label>
         <label>
-            <input type="checkbox" name="tyyli_id" title="Sota">
+            <input type="checkbox" name="tyyli_id" value="Sota">
             sota
         </label>
     </div>
@@ -57,31 +53,27 @@
         <label>Nimi</label>
         <input class="form-control" value="" type="text" name="nimi">
     </div>
-    <div class="form-group">
-        <label>Näyttelijät</label>
-        <textarea class="form-control">TODO keksi miten listaat näyttelijät
-        </textarea>
-    </div>
+
     <div class="form-group">
         <label>Kirjoita selostus elokuvasta</label>
         <textarea class="form-control" rows="5" name="kuvaus"></textarea>
     </div>
     <div class="checkbox">
-        <p> AIHE </p>
+        <h1> VALITSE AIHE </h1>
         <label>
-            <input type="checkbox" name="tyyli_id" title="Kauhu">
+            <input type="checkbox" name="tyyli_id" value="Kauhu">
             kauhu
         </label>
         <label>
-            <input type="checkbox" name="tyyli_id" title="Komedia">
+            <input type="checkbox" name="tyyli_id" value="Komedia">
             komedia
         </label>
         <label>
-            <input type="checkbox" name="tyyli_id" title="Draama">
+            <input type="checkbox" name="tyyli_id" value="Draama">
             draama
         </label>
         <label>
-            <input type="checkbox" name="tyyli_id" title="Sota">
+            <input type="checkbox" name="tyyli_id" value="Sota">
             sota
         </label>
     </div>
